packages/parser/test/tokenizer/E0004.txt
''
===== err =====
anonymous:1:1: SyntaxError: E0004 - Empty character literal
1 | ''
  | ~~
